.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Company_value__c.object
<CustomObject>
    <description>Records company values used e.g. in values based assessment</description>
    <fields>
        <fullName>xcdhcm__Company__c</fullName>
        <label>Company</label>
        <referenceTo>xcdhcm__Company__c</referenceTo>
        <relationshipLabel>Company Values</relationshipLabel>
        <relationshipName>Company_Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Description__c</fullName>
        <label>Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__No_longer_in_use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No longer in use</label>
        <type>Checkbox</type>
    </fields>
    <label>Company Values</label>
    <nameField>
        <label>Company value</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>